--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .navBar{
     background-color: rgba(0, 0, 0, 0.8);
+    z-index:5;
 }
 
 .navBar img{
